--- a/practice1/main/templates/main/index.html
+++ b/practice1/main/templates/main/index.html
@@ -1,8 +1,11 @@
 {% extends 'main/layout.html' %}
+{% load static %}
+Main
 {% block title%}
 <h1>Document</h1>
 {% endblock %}
 {% block content %}
-<h1>HELLOOO</h1>
-{% include 'main/test.html' %}
+<div class="features"
+<h1>{{ title }}</h1>
+
 {% endblock %}
