--- a/practice1/main/templates/main/layout.html
+++ b/practice1/main/templates/main/layout.html
@@ -1,4 +1,5 @@
-<!doctype html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +8,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}
     {% endblock %}</title>
-    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-Привет
-    {% block content %}
-    {% endblock %}
+<aside>
+    <img src=" {% static 'main/img/img.png' %} ">
+    <span class = "logo">RM</span>
+    <h3>Navigation</h3>
+    <ul>
+        <a href = "{% url 'index' %}"><li><i class="fa-solid fa-house"></i>Main</li></a>
+        <a href = "{% url 'about' %}"><li><i class="fa-solid fa-book"></i>About us</li></a>
+    </ul>
+</aside>
+<main> {% block content %}
+    {% endblock %}</main>
+
 </body>
 </html>
